Apply HTML template using Handlebars

--- a/src/main/resources/templates/detailGame.html.hbs
+++ b/src/main/resources/templates/detailGame.html.hbs
@@ -1,4 +1,4 @@
-{{#games}}
+{{#game}}
 
     <p><a href=/games>Go back to Game List</a></p>
 
@@ -6,4 +6,4 @@
     <p>state : {{state}}</p>
     <p>players : {{playerNames}}</p>
 
-{{/games}}
+{{/game}}
