Fix HTML template

--- a/src/main/resources/templates/detailGame.html.hbs
+++ b/src/main/resources/templates/detailGame.html.hbs
@@ -1,6 +1,6 @@
 {{#game}}
 
-    <p><a href=/games>Go back to Game List</a></p>
+    <p><a href='/games'>Go back to Game List</a></p>
 
     <h1>Game {{id}}</h1>
     <p>state : {{state}}</p>
