--- a/src/main/resources/templates/games.html.hbs
+++ b/src/main/resources/templates/games.html.hbs
@@ -1,11 +1,11 @@
 <h1>List of Games</h1>
 
-<button onclick= location.href="/games/create" type= button>Create game</button>
+<button onclick= location.href='/games/create' type= button>Create game</button>
 
 <ul style=\"list-style-type:square\">
 
 {{#games}}
-    <li><a href=/games/{{id}}>Game {{id}}</a> is {{state}}</li>
+    <li><a href='/games/{{id}}'>Game {{id}}</a> is {{state}}</li>
 {{/games}}
 
 </ul>
