--- a/src/main/resources/templates/detailGame.html.hbs
+++ b/src/main/resources/templates/detailGame.html.hbs
@@ -6,10 +6,8 @@
     <p>state : {{state}}</p>
     <p>players : {{playerNames}}</p>
 
-    <div class="entry">
-        {{#if author}}
-            <button onclick= location.href='/games/{{id}}/join' type= button>Join this game</button>
-        {{/if}}
-    </div>
+    {{#if isOpen}}
+        <button onclick= location.href='/games/{{id}}/join' type= button>Join this game</button>
+    {{/if}}
 
 {{/game}}
