Fix HTML template with if & each helpers

--- a/src/main/resources/templates/games.html.hbs
+++ b/src/main/resources/templates/games.html.hbs
@@ -4,8 +4,8 @@
 
 <ul style=\"list-style-type:square\">
 
-{{#games}}
+{{#each games}}
     <li><a href='/games/{{id}}'>Game {{id}}</a> is {{state}}</li>
-{{/games}}
+{{/each}}
 
 </ul>
